<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/registarLoginPerfilFragment"
    tools:context=".fragmentos.perfil.RegistarLoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="75dp"
        >
        <Button
            android:id="@+id/Btn_registarEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/registerEmail"
            android:textAllCaps="false"
            android:onClick="onRegistarEmail"
            android:textSize="16sp"
            >
        </Button>

        <Button
            android:id="@+id/Btn_LoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/loginEmail"
            android:textAllCaps="false"
            android:onClick="onAutenticarEmail"
            android:textSize="16sp"
            >
        </Button>

        <Button
            android:id="@+id/Btn_LoginContaGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/loginGoogle"
            android:textAllCaps="false"
            android:onClick="onAutenticarGoogle"
            android:textSize="16sp"
            >
        </Button>


    </LinearLayout>



</LinearLayout>